fixed slideshow covers, finished portfolio

--- a/src/index.css
+++ b/src/index.css
@@ -623,6 +623,7 @@ body {
 .slideshow-background {
   height: 100%;
   width: 100%;
+  object-fit: cover;
   opacity: 1;
 }
 
