--- a/src/sass/components/_slideshow.scss
+++ b/src/sass/components/_slideshow.scss
@@ -36,6 +36,8 @@
     height: 100%;
     width: 100%;
 
+    object-fit: cover;
+
     opacity: 1;
 }
 
